stop jumpy scroll behavior

--- a/assets/homepage/CSS/style.css
+++ b/assets/homepage/CSS/style.css
@@ -142,7 +142,7 @@ body {
 @media only screen and (max-width: 990px) {
     #navbar{
         flex-direction: column;
-        min-height: 80px;
+        height: 19rem;
         z-index: 2;
     }
     #navbar h2{
@@ -163,8 +163,6 @@ body {
         width: 500px;
     }
     #landing-text{
-        position: absolute;
-        top: 12rem;
         width: 60%;
         font-size: 60pt;
         
